# Heroes_AI

./: .gitignore  CMakeLists-Linux.txt  CMakeLists.txt  README.md  Readme.md  boot.bat  boot.bat_  boot.sh  bootbat.txt  bootsh.txt  manage.bat
data/: decorations.txt  ground.txt  interactable.txt  map.txt  walkable.txt
media/sprites/: map_pointer.png~
media/sprites/map/: m3.png~  sea_corner.png~  sea_corner_fill.png~  stg_corner.png~
media/sprites/resources/: crystal.png~
src/: AttackType.h  FieldUnit.cc  FieldUnit.h  FieldUnitFactory.cc  FieldUnitFactory.h  HexMap.hpp  MeleeStrategy.cc  MeleeStrategy.h  Unit.cc  Unit.h  UnitFactory.cc  UnitFactory.h  main.cc
src/enums/: ArmyType.h  AttackType.h  LogLevel.h  MapObjectType.h  MoveType.h  ResourceType.h  SceneType.h  Tile.h  UnitType.h
src/headers/: Army.h  AttackStrategy.h  BattleField.h  BattleManager.h  Display.h  FieldArmy.h  FieldUnit.h  FieldUnitFactory.h  FieldUnitRenderable.h  FogTile.h  GridPositionParser.h  GridTile.h  Health.h  HeroesAI.h  HeroesAIExcept.h  Hex.h  Hex.hpp  HexMap.hpp  IClickable.h  IInteractable.h  IManager.h  IRenderable.h  InitiativeQueue.h  InputController.h  Logger.h  MapDecoration.h  MapEnemy.h  MapFileConverter.h  MapHero.h  MapManager.h  MapPointer.h  MapTile.h  MinMax.h  RangeStrategy.h  RenderObject.h  RendersVisitator.h  Resource.h  ResourceCounter.h  Statistic.h  SymbolsToPaths.hpp  (+7 more)
src/source/: Army.cc  BattleField.cc  BattleManager.cc  Display.cc  FieldArmy.cc  FieldUnit.cc  FieldUnitFactory.cc  FieldUnitRenderable.cc  FogTIle.cc  GridPositionParser.cc  GridTile.cc  Health.cc  HeroesAI.cc  Hex.cc  InitiativeQueue.cc  InputController.cc  Logger.cc  MapDecoration.cc  MapEnemy.cc  MapFileConverter.cc  MapHero.cc  MapManager.cc  MapPointer.cc  MapTile.cc  MinMax.cc  RangeStrategy.cc  RendersVisitator.cc  Resource.cc  ResourcesCounter.cc  Statistic.cc  SymbolsTranslator.cc  Texture.cc  TextureManager.cc  Unit.cc  UnitFactory.cc  UnitMove.cc
tests/: ArmyTests.cc  BattleFieldTests.cc  FieldArmyTests.cc  FieldUnitTests.cc  HealthTests.cc  HexMapTests.cc  HexTests.cc  InitiativeQueueTests.cc  StatisticTests.cc  UnitClassTests.cc  UnitTests.cc
